--- a/lib/templates/clients/cobaltstrike.j2
+++ b/lib/templates/clients/cobaltstrike.j2
@@ -1,6 +1,7 @@
 #
 # Save this file as a CNA file and load the script into Cobalt Strike
 # Everytime a beacon calls back the pwnboard will be updated
+# Special Thanks to @wumbo for the script
 #
 sub updatePwnBoard {
     local('$pwnboard_url @curl_command');
